--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "vue-router": "^3.5.2",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.5.8",
-    "vuetify-image-input": "^19.2.2",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3"
   },
@@ -42,6 +41,7 @@
     "@types/faker": "^5.5.8",
     "@types/fs-extra": "^9.0.13",
     "@types/meteor": "^1.4.70",
+    "@types/meteor-astronomy": "^2.6.6",
     "@types/meteor-mdg-validated-method": "^1.2.3",
     "@types/meteor-roles": "^1.2.33",
     "@types/mocha": "^8.2.2",
