Test: Add unit tests for users module

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "meteor run",
     "run:mac": "MONGO_URL=mongodb://localhost:27017/theory-swe meteor --settings ./settings/settings-development.json",
     "run:windows": "SET MONGO_URL=mongodb://localhost:27017/theory-swe& meteor --settings ./settings/settings-development.json",
-    "test": "meteor test --once --driver-package meteortesting:mocha",
+    "test": "meteor test --once --full-app --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
@@ -58,6 +58,8 @@
       "client": "client/main.ts",
       "server": "server/main.ts"
     },
-    "testModule": "tests/main.ts"
+    "testModule": {
+      "server": "tests/server/main.ts"
+    }
   }
 }
