--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/runtime": "^7.15.3",
-    "@vuejs-community/vue-filter-date-format": "^1.6.3",
+    "@babel/core": "^7.20.2",
+    "@babel/runtime": "^7.20.1",
+    "@mdi/font": "^7.0.96",
+    "@vee-validate/rules": "^4.6.7",
     "bcrypt": "^5.0.1",
     "busboy": "^0.3.1",
     "detect-file-type": "^0.2.8",
@@ -21,21 +22,22 @@
     "helmet": "^4.6.0",
     "iso-datestring-validator": "^2.2.0",
     "jquery": "^3.6.0",
-    "meteor-node-stubs": "^1.1.0",
+    "meteor-node-stubs": "^1.2.5",
     "mimetypes": "^0.1.1",
+    "mitt": "^3.0.0",
+    "roboto-fontface": "^0.10.0",
     "simpl-schema": "^1.12.0",
-    "vee-validate": "^3.4.13",
-    "vue": "^2.6.14",
-    "vue-currency-filter": "^5.2.0",
-    "vue-meteor-tracker": "^2.0.0-beta.5",
-    "vue-router": "^3.5.2",
-    "vuedraggable": "^2.24.3",
-    "vuetify": "^2.5.8",
-    "vuex": "^3.6.2",
-    "vuex-persist": "^3.1.3"
+    "vee-validate": "^4.6.7",
+    "vue": "^3.2.39",
+    "vue-meteor-tracker": "^3.0.0-beta.7",
+    "vue-router": "^4.1.5",
+    "vuedraggable": "^4.1.0",
+    "vuetify": "^3.0.1",
+    "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@babel/plugin-transform-typescript": "^7.15.4",
     "@types/busboy": "^0.2.4",
     "@types/chai": "^4.2.22",
     "@types/faker": "^5.5.8",
@@ -47,11 +49,17 @@
     "@types/mocha": "^8.2.2",
     "@types/simpl-schema": "^1.12.0",
     "@types/sinon": "^10.0.4",
+    "@types/webfontloader": "^1.6.35",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "autoprefixer": "^10.4.13",
     "chai": "^4.3.4",
     "faker": "^5.5.3",
     "husky": "^7.0.2",
     "sinon": "^11.1.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.8.3",
+    "vite": "^3.2.3",
+    "vite-plugin-vuetify": "^1.0.0",
+    "vue-cli-plugin-vuetify": "^2.5.8"
   },
   "meteor": {
     "mainModule": {
