Feat: Add sass dependency

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "chai": "^4.3.4",
     "faker": "^5.5.3",
     "husky": "^7.0.2",
+    "sass": "^1.56.1",
     "sinon": "^11.1.2",
     "typescript": "^4.8.3",
     "vite": "^3.2.3",
