--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/runtime": "^7.20.1",
     "@mdi/font": "^7.0.96",
     "@vee-validate/rules": "^4.6.7",
+    "@vueuse/core": "^9.13.0",
     "bcrypt": "^5.0.1",
     "busboy": "^0.3.1",
     "detect-file-type": "^0.2.8",
@@ -24,6 +25,7 @@
     "meteor-node-stubs": "^1.2.5",
     "mimetypes": "^0.1.1",
     "mitt": "^3.0.0",
+    "pinia": "^2.0.33",
     "roboto-fontface": "^0.10.0",
     "simpl-schema": "^1.12.0",
     "vee-validate": "^4.6.7",
