--- a/package.json
+++ b/package.json
@@ -52,14 +52,17 @@
     "@types/sinon": "^10.0.4",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
     "chai": "^4.3.4",
     "faker": "^5.5.3",
+    "happy-dom": "^8.9.0",
     "husky": "^7.0.2",
     "sass": "^1.56.1",
     "sinon": "^11.1.2",
     "typescript": "^4.8.3",
     "vite": "^4.0.4",
     "vite-plugin-vuetify": "^1.0.1",
+    "vitest": "^0.29.2",
     "vue-cli-plugin-vuetify": "^2.5.8"
   },
   "meteor": {
