--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "helmet": "^4.6.0",
     "iso-datestring-validator": "^2.2.0",
     "meteor-node-stubs": "^1.2.7",
+    "meteor-vite": "^1.7.1",
     "mimetypes": "^0.1.1",
     "mitt": "^3.0.0",
-    "pinia": "^2.0.33",
+    "pinia": "^2.1.7",
     "roboto-fontface": "^0.10.0",
     "simpl-schema": "^1.12.0",
-    "vee-validate": "^4.6.7",
-    "vue": "^3.2.39",
+    "vee-validate": "4.6.7",
+    "vue": "^3.3.11",
     "vue-meteor-tracker": "^3.0.0-beta.7",
     "vue-router": "^4.1.5",
     "vuedraggable": "^4.1.0",
@@ -41,7 +42,7 @@
     "@types/chai": "^4.2.22",
     "@types/faker": "^5.5.8",
     "@types/fs-extra": "^9.0.13",
-    "@types/meteor": "^1.4.70",
+    "@types/meteor": "^1.4.87",
     "@types/meteor-astronomy": "^2.6.6",
     "@types/meteor-mdg-validated-method": "^1.2.3",
     "@types/meteor-roles": "^1.2.33",
@@ -49,15 +50,15 @@
     "@types/simpl-schema": "^1.12.0",
     "@types/sinon": "^10.0.4",
     "@types/webfontloader": "^1.6.35",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^4.5.2",
     "chai": "^4.3.4",
     "faker": "^5.5.3",
     "husky": "^7.0.2",
     "sass": "^1.56.1",
     "sinon": "^11.1.2",
     "typescript": "^4.8.3",
-    "vite": "^4.0.5",
-    "vite-plugin-vuetify": "^1.0.1",
+    "vite": "^4.5.1",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue-cli-plugin-vuetify": "^2.5.8"
   },
   "meteor": {
