--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "chai": "^4.3.4",
     "faker": "^5.5.3",
     "husky": "^7.0.2",
+    "prettier": "^3.1.0",
     "sass": "^1.56.1",
     "sinon": "^11.1.2",
     "typescript": "^4.8.3",
