--- a/.babelrc
+++ b/.babelrc
@@ -6,17 +6,13 @@
         "root": [
           "./src"
         ],
-        "extensions": [".js", ".ts", ".tsx", ".json", ".vue"],
+        "extensions": [".ts"],
         "alias": {
           "*": ".",
           "@root": "./",
           "@api": "./imports/api",
           "@middlewares": "./imports/middlewares",
-          "@both": "./imports/startup/both",
-          "@client": "./imports/startup/client",
-          "@server": "./imports/startup/server",
-          "@components": "./imports/ui/components",
-          "@mixins": "./imports/ui/mixins"
+          "@server": "./imports/startup/server"
         }
       }
     ]
